ASSERTION FAILED: Completion handler should always be called under WebKit::VideoFullscreenManagerProxy::forEachSession https://bugs.webkit.org/show_bug.cgi?id=221343 <rdar://problem/73939450>

Reviewed by Youenn Fablet.

If a client tries to exit fullscreen mode when there is no fullscreen
video present, we should call the completion handler immediately and
return.

Rename requestFullscreenModeWithCallback to requestCloseAllMediaPresentations
because the completion handler is only called when all media presentations
are closed. requestFullscreenModeWithCallback makes it seem like we
can use this function with other modes besides VideoFullscreenModeNone.

No new tests, this will fix a crashing iOS test.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView closeAllMediaPresentations:]):
* UIProcess/Cocoa/VideoFullscreenManagerProxy.h:
* UIProcess/Cocoa/VideoFullscreenManagerProxy.mm:
(WebKit::VideoFullscreenModelContext::requestCloseAllMediaPresentations):
(WebKit::VideoFullscreenManagerProxy::requestCloseAllMediaPresentations):
(WebKit::VideoFullscreenModelContext::requestFullscreenModeWithCallback): Deleted.
(WebKit::VideoFullscreenManagerProxy::requestFullscreenModeWithCallback): Deleted.


Canonical link: https://commits.webkit.org/233748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272425 268f45cc-cd09-0410-ab3c-d52691b4dbfc